--- a/index.css
+++ b/index.css
@@ -1,3 +1,61 @@
+
 #heading{
     color: red;
+}
+
+.header{
+    display: flex;
+justify-content: space-between;
+/* height: 40px; */
+border: 2px solid red;
+}
+
+.logo{
+    width: 150px;
+  
+}
+
+.nav-items > ul{
+    display: flex;
+    font-size: 20px;
+
+}
+
+.nav-items > ul>  li{
+    padding: 10px;
+    margin: 10px;
+    list-style: none;
+}
+
+.restaurant-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.restaurant-card{
+    /* padding: 5px; */
+    margin: 5px;
+background-color: #f0f0f0;
+    width: 200px;
+    /* height: 100%; */
+    /* border: 1px solid black; */
+}
+
+.search{
+    padding: 10px;
+}
+
+.restaurant-logo{
+    /* margin: 3px; */
+    width: 100%;
+}
+
+.restaurant-card:hover{
+    cursor: pointer;
+    border: 1px solid black;
+}
+
+.filter-btn{
+    margin: 10px;
+    cursor: pointer;
 }
