--- a/index.css
+++ b/index.css
@@ -1,99 +1,3 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  /* background-color: aqua; */
-  /* height: 40px; */
-  border: 1px solid #f0f0f0;
-  box-shadow: 0 15px 40px -20px rgba(40, 44, 63, 0.15);
-  /* box-shadow: 0px 10px 0  #f0f0f0dd; */
-}
-
-.logo {
-  width: 150px;
-}
-
-.nav-items > ul {
-  display: flex;
-  font-size: 20px;
-  font-family: ProximaNova, arial, Helvetica Neue, sans-serif;
-  cursor: pointer;
-
-}
-
-.nav-items > ul > li {
-  padding: 10px;
-  margin: 10px;
-  list-style: none;
-}
-
-.restaurant-container {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 20px 0;
-  gap: 20px;
-}
-
-.restaurant-card {
-  /* padding: 5px; */
-  outline: none;
-  margin: 5px;
-  background-color: #f0f0f0;
-  width: 200px;
-  border-radius: 16px;
-  overflow: hidden;
-  filter: drop-shadow(rgba(0, 0, 0, 0.1) 0px 2px 8px);
-  /* height: 100%; */
-  /* border: 1px solid black; */
-}
-
-.search {
-  padding: 10px;
-}
-
-.search-btn {
-  cursor: pointer;
-}
-
-.restaurant-logo {
-  /* margin: 3px; */
-  width: 100%;
-}
-
-.restaurant-card:hover {
-  cursor: pointer;
-  border: 1px solid black;
-}
-
-.filter-btn {
-  margin: 10px;
-  cursor: pointer;
-}
-
-.shimmer-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.shimmer-card {
-  margin: 20px;
-  width: 200px;
-  height: 400px;
-  background-color: #f0f0f0;
-}
-
-.login-btn {
-  padding: 0 10px;
-  margin: 10px;
-  cursor: pointer;
-}
-
-.filter {
-  display: flex;
-  justify-content: center;
-  margin: 10px;
-}
-
-.user-card{
-  padding: 10px;
-  border: 1px solid black;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
